--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "i": "^0.3.7",
     "npm": "^8.12.0",
     "react": "^18.1.0",
+    "react-axios": "^2.0.6",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.2.0",
