--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "firebase": "^9.9.3",
     "formik": "^2.2.9",
     "i": "^0.3.7",
     "npm": "^8.12.0",
